Camino only - Bug 312756: Don't trigger font size increase for fn-+ without command key. r/sr=mento.